--- a/style.css
+++ b/style.css
@@ -67,6 +67,58 @@ body {
   font-weight: normal;
 }
 
+.main-program__section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("./public/images/endless-constellation.svg");
+  padding: 10px 20px;
+}
+
+.hr {
+  width: 50px;
+  margin-bottom: 20px;
+  color: red;
+}
+
+.main-program__section-header {
+  font-family: "Cocogoose Pro-trial, sans-serif";
+  font-size: 24px;
+  margin: 0;
+  color: #f7f7f7;
+  padding: 30px 0;
+}
+
+.main-program__section-list {
+  list-style: none;
+  display: flex;
+  padding: 0;
+}
+
+.main-program__section-list-item {
+  display: flex;
+  flex-direction: column;
+  background-color: red;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  padding: 5px 10px;
+}
+
+.main-program__section-list-item-image {
+  width: 50px;
+}
+
+.main-program__section-description {
+  width: 200px;
+  min-width: 150px;
+}
+
+.main-program__section-link {
+  color: #f7f7f7;
+  margin: 40px 0;
+}
+
 @media (min-width: 768px) {
   .hero__section-header {
     width: 40%;
@@ -75,5 +127,14 @@ body {
 
   .hero__section {
     padding: 100px 150px 0 150px;
+  }
+
+  .main-program__section-list {
+    gap: 10px;
+  }
+
+  .main-program__section-description {
+    width: 200px;
+    min-width: 150px;
   }
 }
