--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 body {
-  font-family: "Lato, sans-serif";
+  font-family: 'Lato, sans-serif';
   background-color: rgb(227, 218, 218);
   width: 100%;
   margin: 0;
 }
 
 @font-face {
-  font-family: "Cocogoose Pro-trial";
-  src: url("./fonts/Cocogoose\ Pro-trial.ttf");
+  font-family: 'Cocogoose Pro-trial';
+  src: url('./fonts/Cocogoose\ Pro-trial.ttf');
 }
 
 .header {
-  font-family: "Cocogoose Pro-trial, sans-serif";
+  font-family: 'Cocogoose Pro-trial, sans-serif';
   font-weight: bolder;
   width: 100%;
 }
@@ -55,14 +55,14 @@ body {
 .hero__section-timing {
   display: flex;
   flex-direction: column;
-  font-family: "Cocogoose Pro-trial, sans-serif";
+  font-family: 'Cocogoose Pro-trial, sans-serif';
   font-size: 25px;
   font-weight: bolder;
   gap: 5px;
 }
 
 .hero__section-location {
-  font-family: "Lato, sans-serif";
+  font-family: 'Lato, sans-serif';
   font-size: 16px;
   font-weight: normal;
 }
@@ -71,7 +71,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("./public/images/endless-constellation.svg");
+  background-image: url('./public/images/endless-constellation.svg');
   padding: 10px 20px;
 }
 
@@ -82,7 +82,7 @@ body {
 }
 
 .main-program__section-header {
-  font-family: "Cocogoose Pro-trial, sans-serif";
+  font-family: 'Cocogoose Pro-trial, sans-serif';
   font-size: 24px;
   margin: 0;
   color: #f7f7f7;
@@ -93,12 +93,15 @@ body {
   list-style: none;
   display: flex;
   padding: 0;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .main-program__section-list-item {
   display: flex;
   flex-direction: column;
-  background-color: red;
+  background-color: #cfd3dc47;
   justify-content: center;
   align-items: center;
   width: fit-content;
@@ -109,6 +112,14 @@ body {
   width: 50px;
 }
 
+.main-program__section-heading {
+  color: #e54f37;
+  margin: 0;
+  padding: 20px;
+  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-size: 24px;
+}
+
 .main-program__section-description {
   width: 200px;
   min-width: 150px;
@@ -117,6 +128,109 @@ body {
 .main-program__section-link {
   color: #f7f7f7;
   margin: 40px 0;
+}
+
+.featured-speakers__section {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: repeat(auto-fill, 606px);
+  grid-template-rows: auto auto auto;
+  gap: 20px 20px;
+  grid-template-areas:
+    '. .'
+    '. .'
+    '. .';
+  justify-content: center;
+  margin: 0 auto; /* horizontally centers the container */
+  max-width: none;
+}
+
+.featured-speakers__section-header {
+  text-align: center;
+  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-size: 24px;
+}
+
+.featured-speakers__section-grid {
+  display: flex;
+}
+
+.featured-speakers__section-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.featured-speakers__section-list {
+  list-style: none;
+}
+
+.featured-speakers__section-list-item {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+}
+
+.featured-speakers__section-image-2 {
+  width: 150px;
+  height: 150px;
+}
+
+.featured-speakers__section-image-1 {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  margin: -20px -20px;
+  z-index: -1;
+}
+
+.featured-speakers__section-description {
+  width: 200px;
+  margin: 0;
+}
+
+.featured-speakers__section-occupation {
+  font-style: italic;
+  color: #f85846;
+}
+
+.featured-speakers__section-name {
+  margin: 0;
+  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-size: 24px;
+}
+
+.featured-speakers__section-hr {
+  width: 20px;
+  color: rgb(181, 179, 179);
+  margin-left: 0;
+}
+
+.partners-section {
+  background-color: #414246;
+  padding: 50px 0;
+}
+
+.partners-section-flex {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
+}
+
+.partners-section-image {
+  width: 150px;
+  height: 70px;
+}
+
+.partners-section-header {
+  text-align: center;
+  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-size: 30px;
+  color: #8c8c8c;
+  font-weight: lighter;
 }
 
 @media (min-width: 768px) {
