--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ body {
   align-items: center;
 }
 
+.nav__section-list-item {
+  text-decoration: none;
+  color: #000;
+}
+
 .hero__section {
   display: flex;
   flex-direction: column;
@@ -287,6 +292,95 @@ h1 {
 
 .footer__section-description {
   font-weight: lighter;
+}
+
+.about__section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url('./public/images/pattern-randomized.svg');
+}
+
+.about__section-list {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  align-items: center;
+  justify-self: flex-end;
+  align-self: flex-end;
+}
+
+.about__section-elements {
+  display: flex;
+  justify-self: flex-end;
+  align-self: flex-end;
+  padding: 20px 50px;
+}
+
+.about__section-list-item-link {
+  text-decoration: none;
+  color: #000;
+}
+
+.about__section-icon {
+  color: #e54f37;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.about__section-description {
+  background-color: #f7f7f7;
+  padding: 20px 60px;
+  width: 50%;
+  border: 4px solid white;
+  text-align: center;
+}
+
+.about__section-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 100px;
+}
+
+.logo__section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-color: #8c8c8c;
+  padding-bottom: 50px;
+}
+
+.logo__section-image {
+  width: 400px;
+  border: 2px solid #000;
+  padding: 20px 50px;
+}
+
+.logo__section-header {
+  font-size: 30px;
+}
+
+.logo__section-description {
+  width: 600px;
+  text-align: center;
+  font-family: 'Cocogoose Pro-trial, sans-serif';
+}
+
+.past-experiences__section {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.past-experiences__section-header {
+  padding: 20px;
 }
 
 @media (min-width: 768px) {
