--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lato, sans-serif';
+  font-family: 'Lato', sans-serif;
   background-color: rgb(227, 218, 218);
   width: 100%;
   margin: 0;
@@ -16,7 +16,7 @@ body {
 }
 
 .header {
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
   font-weight: bolder;
   width: 100%;
 }
@@ -106,14 +106,14 @@ h1 {
 .hero__section-timing {
   display: flex;
   flex-direction: column;
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
   font-size: 36px;
   font-weight: bolder;
   gap: 5px;
 }
 
 .hero__section-location {
-  font-family: 'Lato, sans-serif';
+  font-family: 'Lato', sans-serif;
   font-size: 16px;
   font-weight: normal;
   padding-bottom: 50px;
@@ -140,7 +140,7 @@ h1 {
 }
 
 .main-program__section-header {
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
   font-size: 24px;
   margin: 0;
   color: #f7f7f7;
@@ -174,7 +174,7 @@ h1 {
   color: #e54f37;
   margin: 0;
   padding: 20px;
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
   font-size: 24px;
 }
 
@@ -204,7 +204,7 @@ h1 {
 
 .featured-speakers__section-header {
   text-align: center;
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
   font-size: 24px;
 }
 
@@ -255,7 +255,7 @@ h1 {
 
 .featured-speakers__section-name {
   margin: 0;
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
   font-size: 24px;
 }
 
@@ -284,7 +284,7 @@ h1 {
 
 .partners__section-header {
   text-align: center;
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
   font-size: 30px;
   color: #8c8c8c;
   font-weight: lighter;
@@ -384,7 +384,7 @@ h1 {
 .logo__section-description {
   width: 600px;
   text-align: center;
-  font-family: 'Cocogoose Pro-trial, sans-serif';
+  font-family: 'Cocogoose Pro-trial', sans-serif;
 }
 
 .past-experiences__section {
@@ -399,32 +399,18 @@ h1 {
   margin: 0;
 }
 
-.past-experiences__section-image-wrapper {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
+.past-experiences__section-image-wrapper,
 .past-experiences__section-image-wrapper-2 {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
+  position: relative;
+  width: 400px;
+  height: 200px;
 }
 
-.middle {
-  transition: 0.5s ease;
-  opacity: 0;
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  width: 200px;
-}
-
+.middle,
 .middle-2 {
   transition: 0.5s ease;
   opacity: 0;
@@ -437,12 +423,7 @@ h1 {
   width: 200px;
 }
 
-.past-experiences__section-image-text {
-  color: #000;
-  font-weight: bolder;
-  font-size: 16px;
-}
-
+.past-experiences__section-image-text,
 .past-experiences__section-image-text-2 {
   color: #000;
   font-weight: bolder;
@@ -465,18 +446,6 @@ h1 {
   gap: 80px;
   background-color: #2e2e2e;
   color: white;
-}
-
-.past-experiences__section-image-wrapper {
-  position: relative;
-  width: 400px;
-  height: 200px;
-}
-
-.past-experiences__section-image-wrapper-2 {
-  position: relative;
-  width: 400px;
-  height: 200px;
 }
 
 .past-experiences__section-image,
@@ -540,14 +509,14 @@ h1 {
   }
 
   .hero__section-header {
-    font-family: 'Cocogoose Pro-trial, sans-serif';
+    font-family: 'Cocogoose Pro-trial', sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 40px;
   }
 
   .hero__section-heading {
-    font-family: 'Cocogoose Pro-trial, sans-serif';
+    font-family: 'Cocogoose Pro-trial', sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 16px;
@@ -609,6 +578,7 @@ h1 {
     justify-content: center;
     margin: 0 auto;
   }
+
   .main-program__section-link {
     display: none;
   }
@@ -627,7 +597,7 @@ h1 {
   }
 
   .about__section-header {
-    font-family: 'Cocogoose Pro-trial, sans-serif';
+    font-family: 'Cocogoose Pro-trial', sans-serif;
     font-weight: bold;
     width: 100%;
     font-size: 40px;
@@ -660,6 +630,7 @@ h1 {
     width: 75%;
     margin-bottom: 30px;
   }
+
   .past-experiences__section {
     text-align: center;
     padding: 0 20px;
